--- a/README
+++ b/README
@@ -41,7 +41,9 @@ don't give away secrets from real games.
 Extra IFM Programs
 ******************
 
-There are a few utility programs bundled with IFM...
+There are a few utility programs bundled with IFM.  To make the most use of
+them, you'll need a few other things installed on your system: Tcl/Tk,
+perl, xfig, transfig and TeX.
 
 ifm2dev
 =======
@@ -50,15 +52,19 @@ ifm2dev is a perl script which is a front end to fig2dev, which converts
 diagrams in Fig format to various other formats.  ifm2dev converts each map
 section and writes them to separate files.
 
+ifm2tex
+=======
+
+ifm2tex is another perl script which uses ifm2dev to dump EPS maps and
+include them in a LaTeX document, together with tables of items and tasks.
+
 tkifm
 =====
 
-tkifm is a simple graphical interface to IFM.  To use it, you need to have
-Tcl/Tk installed (probably v8.0 or greater).
-
-tkifm provides you with a window allowing you to edit IFM input (or just
-view it, if you want to use your own editor), and menus to view the maps
-you've generated so far or export them to PostScript or Fig format.
+tkifm is a simple graphical interface to IFM.  It provides you with a
+window allowing you to edit IFM input (or just view it, if you want to use
+your own editor), and menus to view the maps you've generated so far or
+export them to PostScript or Fig format.
 
 scr2ifm
 =======
