--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,6 @@
 A big thanks to Dave Chapeskie (dchapes@ddm.on.ca) for lots of great
 suggestions for improving IFM, and also for setting up a web page of IFM
 maps (www.sentex.net/~dchapes/ifm).
+
+Thanks also to Denis Auroux for writing gpp, the Generic Preprocessor.
+Very useful!
