Update Dave's email.

--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,4 @@
-A big thanks to Dave Chapeskie (dchapes@ddm.on.ca) for lots of great
+A big thanks to Dave Chapeskie (dchapes@ddm.wox.org) for lots of great
 suggestions for improving IFM, and also for setting up a web page of IFM
 maps (www.sentex.net/~dchapes/ifm).
 
