--- a/doc/ifm.lyx
+++ b/doc/ifm.lyx
@@ -236,7 +236,7 @@ But eventually it got to the stage where it might be worth releasing, so
  in June 1998 the first version appeared in the IF archive.
  Very soon after that, I got a lot of feedback from one Dave Chapeskie (
 \family typewriter 
-dchapes@ddm.on.ca
+dchapes@ddm.wox.org
 \family default 
 ), who made a lot of great suggestions for improvements and new features.
  He also very kindly started up a Web page for IFM maps; you can find it
