--- a/README
+++ b/README
@@ -23,7 +23,7 @@ edited using Xfig, or converted into many other formats.
 Existing IFM Maps
 *****************
 
-Dave Chapeskie (dchapes@ddm.on.ca) has set up a web page of IFM maps, in
+Dave Chapeskie (dchapes@ddm.wox.org) has set up a web page of IFM maps, in
 source and PostScript format, at
 
       //www.sentex.net/~dchapes/ifm
